--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
